finished npc refactor

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -207,12 +207,53 @@ input:checked + .sheet-slider:before {
 .sheet-toggle input[type='radio']:checked + span {
   color: #FCD116; }
 
-.sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc div.sheet-end div.sheet-spells span[name="attr_dice"], .sheet-npc div.sheet-end div.sheet-forms span[name="attr_software_dice"], .sheet-npc div.sheet-end div.sheet-ic span[name="attr_software_dice"] {
+.sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'], .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice'], .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice'] {
   vertical-align: middle; }
-  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc div.sheet-end div.sheet-spells span[name="attr_dice"]:before, .sheet-npc div.sheet-end div.sheet-forms span[name="attr_software_dice"]:before, .sheet-npc div.sheet-end div.sheet-ic span[name="attr_software_dice"]:before {
+  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:before, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice']:before, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:before {
     content: '('; }
-  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:after, .sheet-npc div.sheet-end div.sheet-spells span[name="attr_dice"]:after, .sheet-npc div.sheet-end div.sheet-forms span[name="attr_software_dice"]:after, .sheet-npc div.sheet-end div.sheet-ic span[name="attr_software_dice"]:after {
+  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:after, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:after, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice']:after, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:after {
     content: ')'; }
+
+.sheet-npc div.sheet-repeating input[name='attr_flag'],
+input.sheet-toggle {
+  position: absolute;
+  opacity: 0;
+  z-index: 2; }
+  .sheet-npc div.sheet-repeating input[name='attr_flag']:checked + span,
+  input.sheet-toggle:checked + span {
+    color: #FCD116; }
+
+.sheet-npc div.sheet-repeating input[name='attr_flag'] + span {
+  opacity: 0; }
+.sheet-npc div.sheet-repeating input[name='attr_flag']:checked + span {
+  opacity: 1; }
+.sheet-npc div.sheet-repeating input[name='attr_flag']:checked ~ .sheet-settings {
+  display: inline-grid;
+  margin-bottom: 2%; }
+
+/*:+:+:+: MATRIX DEVICE :+:+:+:*/
+div.sheet-matrix-device button[name*='Attack']:hover {
+  color: #cc0701; }
+div.sheet-matrix-device button[name*='Sleaze']:hover {
+  color: #007bfc; }
+div.sheet-matrix-device button[name*='Data']:hover {
+  color: #88dd04; }
+div.sheet-matrix-device button[name*='Firewall']:hover {
+  color: #f88703; }
+div.sheet-matrix-device input[type='radio'] {
+  position: relative;
+  opacity: 0;
+  z-index: 2; }
+  div.sheet-matrix-device input[type='radio'] + span {
+    position: relative; }
+div.sheet-matrix-device .sheet-matrixAttack {
+  box-shadow: 0px 0px 29px 8px  #cc0701; }
+div.sheet-matrix-device .sheet-matrixSleaze {
+  box-shadow: 0px 0px 29px 8px  #007bfc; }
+div.sheet-matrix-device .sheet-matrixData {
+  box-shadow: 0px 0px 29px 8px  #88dd04; }
+div.sheet-matrix-device .sheet-matrixFirewall {
+  box-shadow: 0px 0px 29px 8px  #f88703; }
 
 /******************************************************************************/
 /********************************* VARIABLES *********************************/
@@ -1330,7 +1371,6 @@ input.sheet-skill-select {
 .sheet-matrix-bubble {
   display: inline;
   margin-left: 15px;
-  margin-right: 10px;
   background-color: #222; }
 
 .sheet-matrix-bubble span:nth-of-type(6),
@@ -1657,6 +1697,7 @@ input.sheet-skill-select {
   min-height: 800px;
   padding: 10px 10px;
   width: 720px;
+  /*:+:+:+: REPEATING SECTIONS :+:+:+:*/
   /*:+:+:+: NPC ATTRIBUTES :+:+:+:*/
   /*:+:+:+: NPC BODY :+:+:+:*/
   /*:+:+:+: NPC TEXT BOXES AND REPEATING SECTIONS :+:+:+:*/
@@ -1737,6 +1778,26 @@ input.sheet-skill-select {
       width: 3em; }
     .sheet-npc div.sheet-rows span.sheet-tiny-span {
       margin: 0px 1%; }
+  .sheet-npc div.sheet-repeating h1 {
+    display: inline; }
+  .sheet-npc div.sheet-repeating h2 {
+    font-variant: small-caps;
+    text-align: center;
+    text-decoration: underline; }
+  .sheet-npc div.sheet-repeating input[type='number'], .sheet-npc div.sheet-repeating input[type='text'] {
+    width: 100%; }
+  .sheet-npc div.sheet-repeating input[name='attr_flag'] {
+    top: 15%; }
+  .sheet-npc div.sheet-repeating div.repitem:hover > input[name='attr_flag'] + span, .sheet-npc div.sheet-repeating div.repitem:hover > input[name='attr_program_on'] + span {
+    opacity: 1; }
+  .sheet-npc div.sheet-repeating div.repitem div.sheet-settings {
+    min-width: 700px; }
+  .sheet-npc div.sheet-repeating div.sheet-settings select, .sheet-npc div.sheet-repeating div.sheet-settings label, .sheet-npc div.sheet-repeating div.sheet-settings span {
+    grid-row: 2; }
+  .sheet-npc div.sheet-repeating div.sheet-settings label[data-i18n-title='notes'] {
+    grid-row: 3; }
+    .sheet-npc div.sheet-repeating div.sheet-settings label[data-i18n-title='notes'] input[type='text'] {
+      text-align: left; }
   .sheet-npc div.sheet-attribute {
     border-bottom: 1px solid #fff;
     border-top: 1px solid #fff;
@@ -1801,37 +1862,6 @@ input.sheet-skill-select {
             width: 100%; }
     .sheet-npc div.sheet-end div.sheet-repeating {
       grid-column: 1 / 4; }
-      .sheet-npc div.sheet-end div.sheet-repeating h1 {
-        display: inline; }
-      .sheet-npc div.sheet-end div.sheet-repeating h2 {
-        font-variant: small-caps;
-        text-align: center;
-        text-decoration: underline; }
-      .sheet-npc div.sheet-end div.sheet-repeating input[type='number'], .sheet-npc div.sheet-end div.sheet-repeating input[type='text'] {
-        width: 100%; }
-      .sheet-npc div.sheet-end div.sheet-repeating input[name='attr_flag'] {
-        position: absolute;
-        opacity: 0;
-        z-index: 2;
-        top: 5%; }
-        .sheet-npc div.sheet-end div.sheet-repeating input[name='attr_flag'] + span {
-          opacity: 0; }
-        .sheet-npc div.sheet-end div.sheet-repeating input[name='attr_flag']:checked + span {
-          color: #FCD116;
-          opacity: 1; }
-        .sheet-npc div.sheet-end div.sheet-repeating input[name='attr_flag']:checked ~ .sheet-settings {
-          display: inline-grid;
-          margin-bottom: 2%; }
-      .sheet-npc div.sheet-end div.sheet-repeating div.repitem:hover > input[name='attr_flag'] + span {
-        opacity: 1; }
-      .sheet-npc div.sheet-end div.sheet-repeating div.repitem div.sheet-settings {
-        min-width: 700px; }
-      .sheet-npc div.sheet-end div.sheet-repeating div.sheet-settings select, .sheet-npc div.sheet-end div.sheet-repeating div.sheet-settings label, .sheet-npc div.sheet-end div.sheet-repeating div.sheet-settings span {
-        grid-row: 2; }
-      .sheet-npc div.sheet-end div.sheet-repeating div.sheet-settings label[data-i18n-title='notes'] {
-        grid-row: 3; }
-        .sheet-npc div.sheet-end div.sheet-repeating div.sheet-settings label[data-i18n-title='notes'] input[type='text'] {
-          text-align: left; }
     .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem div.sheet-settings {
       grid-template-columns: 2fr 8em 8em 1fr 1fr;
       grid-column-gap: 1%;
@@ -1873,28 +1903,17 @@ input.sheet-skill-select {
       grid-template-columns: 1fr 8em 8em 8em; }
     .sheet-npc div.sheet-end div.sheet-ic label[data-i18n-title='notes'] {
       grid-column: 1 / 6; }
+  .sheet-npc div.sheet-matrix {
+    width: 100%; }
   .sheet-npc div.sheet-matrix-device {
-    margin-bottom: 5%; }
+    margin-bottom: 5%;
+    /*:+:+:+: NPC PROGRAMS :+:+:+:*/ }
     .sheet-npc div.sheet-matrix-device div.sheet-rows {
       display: inline-grid;
       grid-template-columns: 12em 45% 10em 1fr;
       grid-row-gap: 5%; }
       .sheet-npc div.sheet-matrix-device div.sheet-rows:first-child {
-        margin-bottom: 5%; }
-    .sheet-npc div.sheet-matrix-device button[name*='Attack']:hover {
-      color: #cc0701; }
-    .sheet-npc div.sheet-matrix-device button[name*='Sleaze']:hover {
-      color: #007bfc; }
-    .sheet-npc div.sheet-matrix-device button[name*='Data']:hover {
-      color: #88dd04; }
-    .sheet-npc div.sheet-matrix-device button[name*='Firewall']:hover {
-      color: #f88703; }
-    .sheet-npc div.sheet-matrix-device input[type='radio'] {
-      position: relative;
-      opacity: 0;
-      z-index: 2; }
-      .sheet-npc div.sheet-matrix-device input[type='radio'] + span {
-        position: relative; }
+        margin-bottom: 4%; }
     .sheet-npc div.sheet-matrix-device label {
       width: 100%; }
       .sheet-npc div.sheet-matrix-device label input[type='text'] {
@@ -1906,29 +1925,29 @@ input.sheet-skill-select {
         margin-left: 25%;
         width: 25px; }
     .sheet-npc div.sheet-matrix-device div.sheet-matrix-bubble {
-      grid-column: 2 / 4; }
-  .sheet-npc div.sheet-matrix {
-    width: 100%;
-    /*:+:+:+: NPC MATRIX BUBBLES :+:+:+:*/ }
-    .sheet-npc div.sheet-matrix div.sheet-matrix-bubble {
-      background-color: transparent; }
-      .sheet-npc div.sheet-matrix div.sheet-matrix-bubble input[type='radio'] {
+      background-color: transparent;
+      height: 15px;
+      grid-column: 2 / 4;
+      /*:+:+:+: NPC MATRIX BUBBLES :+:+:+:*/ }
+      .sheet-npc div.sheet-matrix-device div.sheet-matrix-bubble input[type='radio'] {
         height: 25px;
         width: 20px;
-        left: 0px; }
-        .sheet-npc div.sheet-matrix div.sheet-matrix-bubble input[type='radio'] + span {
+        left: 0px;
+        top: -115%; }
+        .sheet-npc div.sheet-matrix-device div.sheet-matrix-bubble input[type='radio'] + span {
           border-radius: 5px;
           height: 25px;
           left: 5px;
-          width: 20px; }
-    .sheet-npc div.sheet-matrix .sheet-matrixAttack {
-      box-shadow: 0px 0px 29px 8px  #cc0701; }
-    .sheet-npc div.sheet-matrix .sheet-matrixSleaze {
-      box-shadow: 0px 0px 29px 8px  #007bfc; }
-    .sheet-npc div.sheet-matrix .sheet-matrixData {
-      box-shadow: 0px 0px 29px 8px  #88dd04; }
-    .sheet-npc div.sheet-matrix .sheet-matrixFirewall {
-      box-shadow: 0px 0px 29px 8px  #f88703; }
+          width: 20px;
+          top: -60%; }
+    .sheet-npc div.sheet-matrix-device div.repcontainer {
+      grid-column: 1 / 6; }
+      .sheet-npc div.sheet-matrix-device div.repcontainer h2[data-i18n='notes'] {
+        grid-row: 3; }
+      .sheet-npc div.sheet-matrix-device div.repcontainer label[data-i18n-title='notes'] {
+        grid-row: 4; }
+      .sheet-npc div.sheet-matrix-device div.repcontainer input.sheet-toggle {
+        top: 3%; }
 
 /********************************************************************************************************/
 /********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
@@ -1943,7 +1962,7 @@ input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
 input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
-input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
+input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2), input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-grunt.sheet-hide-magic,
