--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -95,11 +95,10 @@
 		}
 	}
 
-	input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2),
+	input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
 	input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2)  { 
 		@extend %display-none;
 	}
-
 
 	/* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
 	input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
