--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -1210,8 +1210,8 @@
 			.sheet-matrix-bubble {
 				display         : inline;
 				margin-left     : 15px;
-				margin-right    : 10px;
-				background-color:  #222;}
+				background-color:  #222;
+			}
 
 			.sheet-matrix-bubble span:nth-of-type(6),
 			.sheet-matrix-bubble input[type='radio']:nth-of-type(5n+6) {
@@ -1220,7 +1220,8 @@
 			.sheet-matrix-bubble input[type='radio'] {
 				height: 15px;
 				left  : -8px;
-				width : 15px;}
+				width : 15px;
+			}
 
 			.sheet-matrix-bubble input[type='radio'] + span {
 				border-radius: 3px;
@@ -1228,7 +1229,8 @@
 				height       : 18px;
 				margin-left  : -25px;
 				top          : 4px;
-				width        : 18px;}
+				width        : 18px;
+			}
 
 			.sheet-matrix-bubble input[type='radio']:checked ~ input[type='radio'] + span {
 				height       : 14px;
