--- a/Shadowrun5thEdition/old.css
+++ b/Shadowrun5thEdition/old.css
@@ -1,17 +1,4 @@
-  /*:+:+:+: NPC BONUS ROW CUSTOMIZATIONS :+:+:+:*/
-    .sheet-bonusrow {
-      display: inline-block;
-      width  : 100%;
-    }
 
-
-  /*:+:+:+: NPC CUSTOMIZED DISPLAYS :+:+:+:*/
-    .sheet-textrow {
-      display: inline-block;
-      width  : 100%;
-    }
-
-    .sheet-textrow textarea {margin-bottom: 10px;}
 
     .sheet-settings .sheet-textrow label {margin-bottom: 36px;}
 
@@ -38,8 +25,7 @@
 
     .sheet-repeating label {padding: 0px;}
 
-    .sheet-repeating .sheet-settings,
-    .sheet-npc-repeating .sheet-settings {
+    .sheet-repeating .sheet-settings {
       border-bottom: 1px dotted #FCD116;}
 
     .sheet-repeat-indent {
@@ -103,10 +89,6 @@
     .sheet-magic .sheet-repeating select {width: 100%;}
 
   /*:+:+:+: NPC MATRIX :+:+:+:*/
-      .sheet-npc .sheet-matrix .sheet-repeat-indent,
-      .sheet-host .sheet-repeat-indent {
-        padding-left: 3em;
-        text-indent : -1.5em;}
 
       input.sheet-program-toggle {
         left: 15px;
@@ -168,35 +150,31 @@
       width: 100%;} 
 
   /*:+:+:+: NPC ARMOR BUTTONS :+:+:+:*/
-    .sheet-npc .sheet-armor-buttons {
-      display: inline;
-      margin-left: 15px;} 
-
-    .sheet-npc .sheet-armor-buttons span {
-      font-size: 20px;
-      margin-right: 10px;}
-
     .sheet-armor-buttons,
     .sheet-armor-buttons span,
     .sheet-roll-toggles,
     .sheet-roll-toggles span {
       @extend .sheet-pictos;
-      position: relative;}
+      position: relative;
+    }
 
     .sheet-armor-buttons,
     .sheet-armor-buttons span {
       font-size: 1em;
-      padding: 0px;}
+      padding: 0px;
+    }
 
     .sheet-roll-toggles,
     .sheet-roll-toggles span {
       display: inline;
       font-size: 1.5em;
-      margin-bottom: 5px;}
+      margin-bottom: 5px;
+    }
 
       .sheet-roll-toggles input {
         height: 20px;
-        width: 20px;}
+        width: 20px;
+      }
 
   span.sheet-pictosC {font-family: 'Pictos Custom';}
   span.sheet-pictos3 {font-family: 'Pictos Three';}
