--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -170,7 +170,8 @@ input:checked + .sheet-slider:before {
   font-weight: bolder;
   text-transform: capitalize;
   padding: 5px; }
-  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
+  .sheet-tabs button[type='action'].sheet-pictos, .sheet-tabs .sheet-cc-row button[type='action'][name*='shots'], .sheet-cc-row .sheet-tabs button[type='action'][name*='shots'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_reload'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_reload'], .sheet-tabs .sheet-cc-row button[type='action'][name='act_primary_ammo'], .sheet-cc-row .sheet-tabs button[type='action'][name='act_primary_ammo'], .sheet-tabs button[type='action'].sheet-armor-buttons,
+  .sheet-tabs button[type='action'].sheet-roll-toggles, .sheet-tabs .repcontrol button[type='action'].repcontrol_edit:after, .repcontrol .sheet-tabs button[type='action'].repcontrol_edit:after,
   .sheet-tabs .repcontrol button[type='action'].repcontrol_add:after,
   .repcontrol .sheet-tabs button[type='action'].repcontrol_add:after, .sheet-tabs .itemcontrol button[type='action'].repcontrol_del, .itemcontrol .sheet-tabs button[type='action'].repcontrol_del {
     text-transform: lowercase; }
@@ -542,7 +543,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
 
 .sheet-attr-col {
   display: inline-block;
-  margin-top: 10px;
+  margin-top: 15px;
   vertical-align: top;
   width: 48%; }
   .sheet-attr-col button[type='roll'] {
@@ -565,7 +566,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-attr-col .sheet-totals {
     padding: 0px 2px; }
   .sheet-attr-col-left {
-    margin-left: -13%; }
+    margin-left: -5%; }
   .sheet-attr-col-right {
     width: 50%; }
     .sheet-attr-col-right button[type='roll'] {
@@ -1686,6 +1687,189 @@ input.sheet-skill-select {
 .sheet-hex-hider[value='7'] ~ input[type='checkbox']:nth-child(1n+17) + span {
   display: none; }
 
+.sheet-settings .sheet-textrow label {
+  margin-bottom: 36px; }
+
+.sheet-augmentation div.sheet-display {
+  text-indent: 125px; }
+
+.sheet-power div.sheet-display {
+  text-indent: 65px; }
+
+/*:+:+:+: REPEATING SECTIONS :+:+:+:*/
+.sheet-repeating,
+.sheet-repeat-section {
+  display: inline-block;
+  width: 100%; }
+
+.sheet-repeating button.sheet-display {
+  text-align: left; }
+
+.sheet-repeating input[type='checkbox'],
+.sheet-repeating input[type='checkbox'] + span {
+  position: absolute; }
+
+.sheet-repeating input[type='checkbox'] {
+  width: 15px;
+  height: 15px; }
+
+.sheet-repeating label {
+  padding: 0px; }
+
+.sheet-repeating .sheet-settings {
+  border-bottom: 1px dotted #FCD116; }
+
+.sheet-repeat-indent {
+  padding-left: 2.5em;
+  text-indent: -1.5em; }
+
+.sheet-repeating .sheet-display {
+  display: inline-flex; }
+
+.sheet-repeat-section input {
+  height: 27px;
+  background-color: transparent;
+  border-bottom: 1px solid #fff;
+  border-radius: 0px; }
+
+.sheet-magic .sheet-repeat-section input[type='number'],
+.sheet-magic .sheet-repeat-section input[type='text'],
+.sheet-resonance .sheet-repeat-section input[type='number'],
+.sheet-resonance .sheet-repeat-section input[type='text'] {
+  width: 100%; }
+
+.sheet-repeat-row {
+  display: inherit;
+  width: 5%; }
+
+.sheet-repeat-row-8 {
+  width: 8%; }
+
+.sheet-repeat-row-11 {
+  width: 11%; }
+
+.sheet-repeat-row-12 {
+  width: 12%; }
+
+.sheet-repeat-row-15 {
+  width: 15%; }
+
+.sheet-repeat-row-20 {
+  width: 20%; }
+
+.sheet-repeat-row span {
+  font-size: 0.8em; }
+
+.sheet-repeat-dice {
+  font-size: 12px; }
+
+/*:+:+:+: NPC WEAPONS :+:+:+:*/
+.sheet-repeat-row.sheet-weapon-range,
+.sheet-repeat-row.sheet-weapon-melee {
+  display: none; }
+
+input.sheet-range-toggle,
+input.sheet-melee-toggle {
+  left: 28px;
+  margin-left: -32px;
+  position: relative; }
+
+input.sheet-melee-toggle:checked ~ div.sheet-weapon-melee,
+input.sheet-range-toggle:checked ~ div.sheet-weapon-range {
+  display: inherit; }
+
+input.sheet-melee-toggle + span {
+  margin-right: 0px !important; }
+
+.sheet-weapon-note {
+  display: inherit;
+  margin-top: 3px;
+  width: 100%; }
+
+/*:+:+:+: NPC SPELLS :+:+:+:*/
+input.sheet-spell-toggle {
+  margin: 0px -38px 0px 5px; }
+
+.sheet-magic .sheet-repeating select {
+  width: 100%; }
+
+/*:+:+:+: NPC MATRIX :+:+:+:*/
+input.sheet-program-toggle {
+  left: 15px;
+  top: 5px; }
+
+.sheet-host input.sheet-program-toggle {
+  left: 5px;
+  top: 2px; }
+
+span.sheet-program-toggle {
+  font-size: 15px !important;
+  left: 24px;
+  top: 2px; }
+
+.sheet-program-toggle[value='0'] + div.sheet-repeat-indent {
+  opacity: 0.3; }
+
+/*:+:+:+: HIDE SECTOINS WHEN NOT IN USE :+:+:+:*/
+.sheet-optional-flag:not([value='0']) + .sheet-textboxes {
+  display: inherit;
+  width: 100%; }
+
+.sheet-category[value='Combat'] + div,
+.sheet-category[value='Combat'] + div + div,
+.sheet-character-type[value='matrix'] + .sheet-matrix {
+  display: inherit; }
+
+.sheet-category[value='Combat'] ~ .sheet-combat-type-hide {
+  display: inline; }
+
+.sheet-magic-skill,
+.sheet-resonance-skill {
+  opacity: 0.15; }
+
+.sheet-character-type[value='magic'] + .sheet-magic-skill,
+.sheet-character-type[value='magic'] + .sheet-magic-skill + .sheet-magic-skill,
+.sheet-character-type[value='resonance'] + .sheet-resonance-skill {
+  opacity: 1; }
+
+.sheet-character-type[value='magic'] ~ .sheet-magic,
+.sheet-character-type[value='magic'] ~ .sheet-magic + .sheet-magic,
+.sheet-character-type[value='resonance'] ~ .sheet-resonance,
+.sheet-character-type[value='resonance'] ~ .sheet-resonance + .sheet-resonance {
+  display: inline-block;
+  width: 100%; }
+
+/*:+:+:+: NPC ARMOR BUTTONS :+:+:+:*/
+.sheet-armor-buttons,
+.sheet-armor-buttons span,
+.sheet-roll-toggles,
+.sheet-roll-toggles span {
+  position: relative; }
+
+.sheet-armor-buttons,
+.sheet-armor-buttons span {
+  font-size: 1em;
+  padding: 0px; }
+
+.sheet-roll-toggles,
+.sheet-roll-toggles span {
+  display: inline;
+  font-size: 1.5em;
+  margin-bottom: 5px; }
+
+.sheet-roll-toggles input {
+  height: 20px;
+  width: 20px; }
+
+span.sheet-pictosC {
+  font-family: 'Pictos Custom'; }
+
+span.sheet-pictos3 {
+  font-family: 'Pictos Three'; }
+
+span.sheet-d6 {
+  font-family: 'dicefontd6'; }
+
 /********************************************************************************************************/
 /**************************************** START OF THE NPC SHEET *******************************************/
 /********************************************************************************************************/
@@ -1721,7 +1905,7 @@ input.sheet-skill-select {
     font-size: 0.85em; }
   .sheet-npc input[type='radio'] {
     opacity: 1; }
-  .sheet-npc textarea, .sheet-npc select, .sheet-npc .sheet-matrix input {
+  .sheet-npc textarea, .sheet-npc select {
     color: #fff;
     background-color: #555; }
   .sheet-npc div.sheet-tabs {
@@ -1744,6 +1928,12 @@ input.sheet-skill-select {
     .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'][name='attr_stats_toggle'] + span,
     .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'][name='attr_stats_toggle'] + span,
     .sheet-npc div.sheet-tabs .sheet-flag-primary + div > input[name='attr_stats_toggle'] + span,
+    .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.sheet-armor-buttons,
+    .sheet-npc div.sheet-tabs .sheet-armor-buttons input[name='attr_stats_toggle'] + span,
+    .sheet-armor-buttons .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span,
+    .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.sheet-roll-toggles,
+    .sheet-npc div.sheet-tabs .sheet-roll-toggles input[name='attr_stats_toggle'] + span,
+    .sheet-roll-toggles .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span,
     .sheet-npc div.sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
     .repcontrol .sheet-npc div.sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
     .sheet-npc div.sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_add:after,
@@ -1756,7 +1946,12 @@ input.sheet-skill-select {
       height: 100%; }
     .sheet-npc div.sheet-tabs input[name='attr_stats_toggle']:checked + span {
       color: #FCD116; }
-    .sheet-npc div.sheet-tabs span.sheet-pictos, .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'] + span, .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'] + span, .sheet-npc div.sheet-tabs .sheet-flag-primary + div > span, .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_edit:after,
+    .sheet-npc div.sheet-tabs span.sheet-pictos, .sheet-npc div.sheet-tabs .sheet-settings-toggle input[type='checkbox'] + span, .sheet-settings-toggle .sheet-npc div.sheet-tabs input[type='checkbox'] + span, .sheet-npc div.sheet-tabs .sheet-flag-primary + div > span, .sheet-npc div.sheet-tabs span.sheet-armor-buttons,
+    .sheet-npc div.sheet-tabs .sheet-armor-buttons span,
+    .sheet-armor-buttons .sheet-npc div.sheet-tabs span,
+    .sheet-npc div.sheet-tabs span.sheet-roll-toggles,
+    .sheet-npc div.sheet-tabs .sheet-roll-toggles span,
+    .sheet-roll-toggles .sheet-npc div.sheet-tabs span, .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_edit:after,
     .sheet-npc div.sheet-tabs .repcontrol span.repcontrol_add:after,
     .repcontrol .sheet-npc div.sheet-tabs span.repcontrol_add:after, .sheet-npc div.sheet-tabs .itemcontrol span.repcontrol_del, .itemcontrol .sheet-npc div.sheet-tabs span.repcontrol_del {
       text-align: center;
@@ -1778,6 +1973,8 @@ input.sheet-skill-select {
       width: 3em; }
     .sheet-npc div.sheet-rows span.sheet-tiny-span {
       margin: 0px 1%; }
+  .sheet-npc div.sheet-repeating button {
+    margin: 0px; }
   .sheet-npc div.sheet-repeating h1 {
     display: inline; }
   .sheet-npc div.sheet-repeating h2 {
@@ -1786,8 +1983,6 @@ input.sheet-skill-select {
     text-decoration: underline; }
   .sheet-npc div.sheet-repeating input[type='number'], .sheet-npc div.sheet-repeating input[type='text'] {
     width: 100%; }
-  .sheet-npc div.sheet-repeating input[name='attr_flag'] {
-    top: 15%; }
   .sheet-npc div.sheet-repeating div.repitem:hover > input[name='attr_flag'] + span, .sheet-npc div.sheet-repeating div.repitem:hover > input[name='attr_program_on'] + span {
     opacity: 1; }
   .sheet-npc div.sheet-repeating div.repitem div.sheet-settings {
@@ -1862,17 +2057,6 @@ input.sheet-skill-select {
             width: 100%; }
     .sheet-npc div.sheet-end div.sheet-repeating {
       grid-column: 1 / 4; }
-    .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem div.sheet-settings {
-      grid-template-columns: 2fr 8em 8em 1fr 1fr;
-      grid-column-gap: 1%;
-      grid-row-gap: 0.5%; }
-      .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem div.sheet-settings h2.sheet-full-row {
-        grid-column: 1 / 6;
-        text-align: left; }
-      .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem div.sheet-settings label.sheet-full-row {
-        grid-column: 1 / 6; }
-        .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem div.sheet-settings label.sheet-full-row input[type='text'] {
-          text-align: left; }
     .sheet-npc div.sheet-end div.sheet-inline-repeating div.repitem span[name*='attr_display_rating']:after {
       content: ','; }
     .sheet-npc div.sheet-end div.sheet-inline-repeating div.repcontainer {
@@ -1883,6 +2067,17 @@ input.sheet-skill-select {
         display: inline-block;
         vertical-align: top;
         margin-bottom: 0px; }
+    .sheet-npc div.sheet-end div.sheet-inline-repeating div.sheet-settings {
+      grid-template-columns: 2fr 8em 8em 1fr 1fr;
+      grid-column-gap: 1%;
+      grid-row-gap: 0.5%; }
+      .sheet-npc div.sheet-end div.sheet-inline-repeating div.sheet-settings h2.sheet-full-row {
+        grid-column: 1 / 6;
+        text-align: left; }
+      .sheet-npc div.sheet-end div.sheet-inline-repeating div.sheet-settings label.sheet-full-row {
+        grid-area: 4 / 1 / 4 / 6; }
+        .sheet-npc div.sheet-end div.sheet-inline-repeating div.sheet-settings label.sheet-full-row input[type='text'] {
+          text-align: left; }
     .sheet-npc div.sheet-end div.sheet-weapons div.sheet-settings {
       grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
       grid-column-gap: 0.2%; }
@@ -1926,8 +2121,9 @@ input.sheet-skill-select {
         width: 25px; }
     .sheet-npc div.sheet-matrix-device div.sheet-matrix-bubble {
       background-color: transparent;
-      height: 15px;
       grid-column: 2 / 4;
+      height: 15px;
+      margin-left: 10%;
       /*:+:+:+: NPC MATRIX BUBBLES :+:+:+:*/ }
       .sheet-npc div.sheet-matrix-device div.sheet-matrix-bubble input[type='radio'] {
         height: 25px;
@@ -1956,7 +2152,14 @@ input.sheet-skill-select {
 	============================= */
 .sheet-skills-active,
 .sheet-skills-know,
-.sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-magic, .sheet-matrix, .sheet-vehicle, .sheet-settings, input.sheet-settings-toggle:checked ~ div.sheet-display,
+.sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-matrix,
+.sheet-magic,
+.sheet-resonance,
+.sheet-optional,
+.sheet-textboxes,
+.sheet-optional-flag[value='0'] + .sheet-attr-header,
+.sheet-category + div,
+.sheet-category + div + div, .sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-vehicle, .sheet-settings, input.sheet-settings-toggle:checked ~ div.sheet-display,
 input.sheet-settings-toggle:checked ~ .sheet-attr-col .sheet-attr-und div.sheet-display,
 input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
@@ -1998,11 +2201,14 @@ input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']
   grid-column-gap: 1%;
   grid-row-gap: 1%; }
 
-.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
+.sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .sheet-armor-buttons,
+.sheet-armor-buttons span,
+.sheet-roll-toggles,
+.sheet-roll-toggles span, .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after, .itemcontrol .repcontrol_del {
   font-family: 'Pictos'; }
 
-.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-npc div.sheet-mid div.sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
+.sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value='0']) + .sheet-optional, .sheet-npc div.sheet-mid div.sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
 input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
 input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-column .sheet-settings,
 input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-textrow .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
