fix complex forms

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -208,11 +208,11 @@ input:checked + .sheet-slider:before {
 .sheet-toggle input[type='radio']:checked + span {
   color: #FCD116; }
 
-.sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'], .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice'], .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice'] {
+.sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice'], .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice'], .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice'] {
   vertical-align: middle; }
-  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:before, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice']:before, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:before {
+  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:before, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice']:before, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:before {
     content: '('; }
-  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:after, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:after, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_software_dice']:after, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:after {
+  .sheet-npc div.sheet-end div.sheet-weapons span[name='attr_weapon_dice']:after, .sheet-npc div.sheet-end div.sheet-spells span[name='attr_dice']:after, .sheet-npc div.sheet-end div.sheet-forms span[name='attr_form_dice']:after, .sheet-npc div.sheet-end div.sheet-ic span[name='attr_software_dice']:after {
     content: ')'; }
 
 .sheet-npc div.sheet-repeating input[name='attr_flag'],
