--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -139,7 +139,7 @@ include src/pug/_variables.pug
 	include src/options.html
 
 //- NPCs
-include src/_npc.pug
+include src/pug/_npc.pug
 
 //- FOOTER
 include src/footer.html
