--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -226,7 +226,7 @@
 						h2(data-i18n='limit') Limit
 						if key === 'active'
 							select.skill-select(name='attr_skill' title='@{repeating_'+key+'_${x}_skill}' value='Close Combat Group')
-								include src/pug/skillselect.html
+								include skillselect.html
 						else
 							label(data-i18n-title='skill' title='skill')
 								input(name='attr_skill' placeholder=key title='@{repeating_'+key+'_${x}_skill}' type='text' )
@@ -253,7 +253,7 @@
 				.settings
 					h2.full-row(data-i18n='skill') Skill
 					select.skill-select(name='attr_skill' title='@{repeating_'+key+'_${x}_skill}')
-						include src/pug/skillsselectsprite.html
+						include skillsselectsprite.html
 
 		//- SPRITE POWERS
 		.rows.sprite.repeating.inline-repeating
@@ -338,7 +338,7 @@
 				input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 				span.pictos x
 				input(name='attr_form' type='hidden' value='')
-				span(name='attr_software_dice')
+				span(name='attr_form_dice')
 				+npcButton(formButton)
 				span(name='attr_form')
 				.settings
@@ -348,7 +348,7 @@
 							h2(data-i18n=translationKey) #{key}
 					each val, key in npcComplexFormsObject
 						- const translationKey = key.toLowerCase();
-						- const attrName = key === 'Notes' ? 'note' : 'form_' + key.toLowerCase();
+						- const attrName = key === 'Notes' ? 'form_note' : 'form_' + key.toLowerCase();
 						if val['type'] === 'select'
 							select(name='attr_'+attrName title='@{repeating_form_${x}_'+attrName+'}' value=val['default'])
 								each type in val['array']
