--- a/Shadowrun5thEdition/src/scss/_npc.scss
+++ b/Shadowrun5thEdition/src/scss/_npc.scss
@@ -292,7 +292,7 @@
 				grid-template-columns: 3em 1fr 7em 8em 3em;
 			}
 
-			span[name='attr_software_dice'] { @extend %parantheseNumbers; }
+			span[name='attr_form_dice'] { @extend %parantheseNumbers; }
 			label[data-i18n-title='notes'] { grid-column: 1 / 6; }
 		}
 
