--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -104,7 +104,8 @@ input[type=number].sheet-txtfield {
   -moz-appearance: textfield;
 }
 
-/* dice  */
+/* dice images */
+
 div.sheet-d20{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d20.png); 
   background-size: 30px 30px;
@@ -123,10 +124,43 @@ div.sheet-d6{
 
 /* ------- Buttons ---------- */
 
+button[type="roll"].sheet-d20:before,
+button[type="roll"].sheet-d6:before{
+  content: ' ';
+}
+
+button[type="roll"].sheet-d20:hover,
+button[type="roll"].sheet-d6:hover{
+  background-position: 0;
+}
+
+button[type="roll"].sheet-d20{
+  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d20.png); 
+  background-size: 26px 26px;
+  background-repeat: no-repeat;
+  width: 26px;
+  height: 26px;
+  border-style: none;
+  background-color: transparent;
+  margin-left: 5px;
+}
+
+button[type="roll"].sheet-d6{
+  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/d6.png); 
+  background-size: 26px 26px;
+  background-repeat: no-repeat;
+  width: 26px;
+  height: 26px;
+  border-style: none;
+  background-color: transparent;
+  margin-left: 5px;
+}
+
+/*
 button[type="roll"].sheet-d6:before{
   font-family: 'dicefontd6';
   content: 'f';
-}
+}*/
 
 button[type="roll"].sheet-d10:before{
   font-family: 'dicefontd10';
@@ -137,18 +171,6 @@ button[type="roll"].sheet-empty:before{
   content: ' ';
 }
 
-/*
-button[type="roll"]:not(.sheet-small){
-  color: black;
-  height: 30px;
-  width: 30px;
-  margin-left: 15px;
-}
-
-button[type="roll"]:not(.sheet-small)::before{
-  font-size: 1.4em;
-}
-*/
 
 /*-----------------------------------------------------------------*\
   #SECTIONS
@@ -337,6 +359,7 @@ div.sheet-npc-attrs span:not(.sheet-info){
   border-style: none none solid none;
   margin-bottom: 4px;
   border-width: 2px;
+  text-align: center;
 }
 div.sheet-attrs input[type="number"],
 div.sheet-npc-attrs input[type="number"],
