--- a/Our Last Best Hope/ourlastbesthope.css
+++ b/Our Last Best Hope/ourlastbesthope.css
@@ -1,3 +1,11 @@
+.sheet-charsheet {
+    height:700px;
+    width:800px;
+}
+
+.sheet-logo {
+    text-align:center;
+}
 .sheet-body {
     font-family: "Contrail One", sans-serif;
     display:block;
