--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -555,13 +555,18 @@ input.sheet-tab0 + span {
 
 /*  NOTEBOX */
 .sheet-row-details.sheet-notebox {
-    height: 120px;
+    height: 240px;
+    padding: 0 4px;
 }
 
-.sheet-row-details.sheet-notebox div.sheet-col-notebox {
-    width: 100%;
+.sheet-row-details.sheet-notebox input {
+    text-align: left;
+    width: 88%;
 }
 
+.sheet-row-details.sheet-notebox .sheet-row-misc {
+    height: 22px;
+}
 
 .sheet-row-details.sheet-notebox div.sheet-col-notebox div.sheet-show-notes {
     text-align: left;
@@ -578,10 +583,33 @@ input.sheet-tab0 + span {
     font-style: italic;
 }
 
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes {
+    height: 22px;
+    margin-bottom: 5px;
+}
 
-.sheet-cell.sheet-col-notebox textarea {
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
+    width: 132px;
+    float: left;
+    font-weight: bold;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input {
+    float: left;
+    width: calc(100% - 160px);
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-input input {
+    width: 100%;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-tooltip {
+    margin-left: 0px;
+}
+
+.sheet-col-notebox textarea {
     height: 67px;
-    width: 99%;
+    width: 98%;
 }
 
 
@@ -804,9 +832,14 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-ranged-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
-.sheet-points .sheet-tooltip { margin-left: -300px; }
+.sheet-points .sheet-tooltip { margin-left: -310px; }
 .sheet-spells .sheet-col11 .sheet-tooltip { margin-left: -150px; }
 .sheet-spells .sheet-col12 .sheet-tooltip { margin-left: -200px; }
+
+.sheet-points .sheet-cell .sheet-tooltip {
+    margin-left: -290px;
+    width: 246px;
+}
 
 .sheet-thrown-object {
     width: calc(100% - 140px - 0.8em);
@@ -845,8 +878,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-tooltip { font-size: 11px; }
-.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { font-size: 11px; margin-left: 50px; top: 200px; }
-.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { font-size: 11px; margin-left: 50px; top: 200px; }
+.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
+.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
 .sheet-attribute .sheet-row-condition-stun { height: 25px; }
 .sheet-attribute .sheet-row-condition-stun .sheet-col0,
 .sheet-attribute .sheet-row-condition-stun .sheet-col0 input { 
@@ -1090,6 +1123,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-traits .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-traits .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
+}
+
 /* -- repeating disadvantages -- */
 .sheet-disadvantages { width: calc(100% - 0.4em); }
 .sheet-disadvantages .sheet-col0 { width: calc(100% - 137px); }
@@ -1107,6 +1149,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-disadvantages .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-disadvantages .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
+}
+
 /* -- repeating racial traits -- */
 .sheet-racial { width: calc(100% - 0.4em); }
 .sheet-racial .sheet-col0 { width: calc(100% - 137px); }
@@ -1122,6 +1173,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 .sheet-racial .repcontainer.ui-sortable.editmode .sheet-toggle {
     opacity: 0;
     z-index: -1;
+}
+
+.sheet-racial .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-racial .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
 }
 
 /* -- MISC TAB -- */
@@ -1715,6 +1775,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     background: #B7FFAA;    
 }
 
+.sheet-items .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-items .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
+}
+
 /* -- Bold Carried Items -- */
 input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-total {
     font-weight: bold;
@@ -1883,6 +1952,11 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     border: none;
 }
 
+.sheet-rolltemplate-skillRoll .sheet-container hr.sheet-border {
+    margin: 5px 0 5px 0;
+    border-top: 1px solid black;
+}
+
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result {
     width: 100%;
     border: 1px solid;
@@ -2023,6 +2097,11 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     height: 75px;
     font-size: 11px;
     line-height: 14px;
+}
+
+.sheet-damage-type-notes textarea.sheet-defensive-notes {
+    width: 228px;
+    height: 198px;
 }
 
 .sheet-mark-updates-as-read {
