--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -100,7 +100,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 //- Core
 .core.core-info.cols-2
 	.info.flex.core-box-text
-		+text-input("name", "NAME").important
+		+text-input("character_name", "NAME").important
 		+text-input("level", "LEVEL", "no-spinners")(type="number", min="1", value="1").level.center
 		+text-input("class", "CLASS").level-rest
 		+text-input("background", "BACKGROUND").col25
@@ -139,7 +139,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 				.label
 					button.unstyled-button(type="roll", name="roll_HP", data-i18n="HIT_POINTS" value!="&{template:swn-default} {{charname=@{name}}} {{title=^{HIT_POINTS}}} {{=[[{abs(@{setting_heroic_enable}-1)*@{level}d6 + @{level}*@{constitution_mod}[CON] + @{level}*@{extra_hp_query}, abs(@{setting_heroic_enable}-1)*@{hp|max} + 1d1, 0d0 + @{setting_heroic_enable}*ceil(([[6*@{level}]] [Level] + [[@{level}*@{constitution_mod}]] [Con] + [[@{level}*@{extra_hp_query}]] [Bonus])/2)}kh1]]}} {{info=^{MAXIMUM_HP_1} @{level}d6 + @{level}&ast;[[@{constitution_mod}[CON] + @{extra_hp_query}]] ^{MAXIMUM_HP_2} [[@{hp|max} + 1]]}}")
 			+text-input-duo("strain", "strain_max", "SYSTEM_STRAIN", {value: "10", readonly: true, "data-i18n-title": "CONSTITUTION"})(min="0", value="0")
-			+text-input-duo("strain_permanent_extra", "strain_permanent", "PERMANENT_STRAIN", {readonly: true, "data-i18n-title": "PERMANENT_STRAIN"})(type="number", min="0", value="0", data-i18n-title="TOTAL_CYBERWARE_STRAIN").center
+			+text-input-duo("strain_permanent_extra", "strain_permanent", "PERMANENT_STRAIN", {readonly: true, "data-i18n-title": "PERMANENT_STRAIN"})(type="number", min="0", value="0", data-i18n-title="PERMANENT_STRAIN_EXTRA").center
 			+text-input-duo("xp", "xp_next", "XP_NEXT_LEVEL", {min: "0", value: "3"})(min="0", value="0")
 			+text-input("AC", "ARMOR_CLASS")(type="number", value="10", readonly, data-i18n-title="AC_DESC").center
 			+text-input("attack_bonus", "ATTACK_BONUS")(type="number", min="0", value="0").center
